--- a/20180402.md
+++ b/20180402.md
@@ -161,6 +161,8 @@ oracle55:/u01> vi .bash_profile
 oracle55:/u01> alias  
 ```
 
+####  runinstaller
+
 // 관리자
 user_name : scott
 password : tiger
@@ -186,4 +188,125 @@ With the Partitioning, OLAP, Data Mining and Real Application Testing options
 SQL> show user
 USER is "SYS"
 SQL> @/u01/hr.sql
+PL/SQL procedure successfully completed.
+
+
+Commit complete.
+
+
+     CHECK
+----------
+	20
+	
+
+```
+
+
+
+```
+oracle55:/u01> sqlplus hr
+
+SQL*Plus: Release 11.2.0.4.0 Production on Tue Apr 3 00:56:35 2018
+
+Copyright (c) 1982, 2013, Oracle.  All rights reserved.
+
+Enter password: 
+
+Connected to:
+Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+
+SQL> show user
+USER is "HR"
+SQL> shutdown immediate
+ORA-01031: insufficient privileges
+SQL> conn / as sysdba
+Connected.
+SQL> show user
+USER is "SYS"
+SQL> exit
+Disconnected from Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+oracle55:/u01> sqlplus hr/hr
+
+SQL*Plus: Release 11.2.0.4.0 Production on Tue Apr 3 00:57:33 2018
+
+Copyright (c) 1982, 2013, Oracle.  All rights reserved.
+
+
+Connected to:
+Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+
+SQL> show user
+USER is "HR"
+```
+
+```
+oracle55:/u01> sqlplus hr
+
+SQL*Plus: Release 11.2.0.4.0 Production on Tue Apr 3 00:56:35 2018
+
+Copyright (c) 1982, 2013, Oracle.  All rights reserved.
+
+Enter password: 
+
+Connected to:
+Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+
+SQL> show user
+USER is "HR"
+SQL> shutdown immediate
+ORA-01031: insufficient privileges
+SQL> conn / as sysdba
+Connected.
+SQL> show user
+USER is "SYS"
+SQL> exit
+Disconnected from Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+oracle55:/u01> sqlplus hr/hr
+
+SQL*Plus: Release 11.2.0.4.0 Production on Tue Apr 3 00:57:33 2018
+
+Copyright (c) 1982, 2013, Oracle.  All rights reserved.
+
+
+Connected to:
+Oracle Database 11g Enterprise Edition Release 11.2.0.4.0 - 64bit Production
+With the Partitioning, OLAP, Data Mining and Real Application Testing options
+
+SQL> show user
+USER is "HR"
+SQL> select last_name from employees;
+
+LAST_NAME
+---------------------------------------------------------------------------
+Abel
+Davies
+De Haan
+Ernst
+Fay
+Gietz
+Grant
+Hartstein
+Higgins
+Hunold
+King
+
+LAST_NAME
+---------------------------------------------------------------------------
+Kochhar
+Lorentz
+Matos
+Mourgos
+Rajs
+Taylor
+Vargas
+Whalen
+Zlotkey
+
+20 rows selected.
+
 ```
