--- a/20180402.md
+++ b/20180402.md
@@ -3,6 +3,7 @@
 ### 수업 환경설정
 
 
+
 #### 1. OEL OS install
 -hostname 	네트워크 상에서 ip주소를 가지고 소통하는데 
 		더 쉽게 알아볼 수 있도록 이름을 설정해 주는 것 
@@ -50,6 +51,7 @@
 
 [root@oracle55 network-scripts]# ls -l ifcfg-eth0
 -rw-r--r--. 1 root root 205 Apr  2 20:42 ifcfg-eth0
+//ran카드 정보 
 
 [root@oracle55 network-scripts]# vi /etc/sysconfig/network-scripts/ifcfg-eth0
 DEVICE=eth0
@@ -59,6 +61,10 @@ UUID=f60c2cc9-4ae6-4313-91dd-520d236941c6
 ONBOOT=yes
 NM_CONTROLLED=yes
 BOOTPROTO=static
+//ran카드에 ip를 부여하는 방식 : DHCP / DYNAMIC
+// client 입장에서 ip가 바뀌어도 큰 상관이 없어서 DHCP(동적) 으로 사용해도됨
+// server 는 ip가 바뀌면 큰 문제가 되기 때문에 dynamic(정적) 으로 사용함
+
 IPADDR=192.168.137.55
 GATEWAY=192.168.137.2
 NETMASK=255.255.255.0
@@ -77,6 +83,8 @@ nameserver	8.8.8.8
  도메인을 IP로 변환해주는 DNS서버를 지정해주는 것
  만약에 ping은 가는데 웹주소로 접속이 안될 경우! DNS서버가 꺼져있는 것
 
+
+
  #### 3. 필수파일 설치 및 자동 기본설정 Preinstall
 ```
 [root@oracle55 ~]# yum install oracle-rdbms-server-11gR2-preinstall-1.0-9.el6.x86_64.rpm -y
@@ -88,6 +96,8 @@ nameserver	8.8.8.8
 
 [root@oracle55 ~]# sysctl -p 적용은 수동으로 해줘야함
 ```
+
+
 
  #### 4. unzip 설치
  ```
@@ -310,3 +320,41 @@ Zlotkey
 20 rows selected.
 
 ```
+
+
+
+oracle 서버 설치 스크립트
+
+
+
+
+
+eterprise edition이 full option
+
+select options.
+
+invnetory : 제품 정보 저장하는 인벤토리
+
+
+oracle 계정이 로그인 되어 있어서 bash랑 home경로 지정안됐을 경우 해결방법
+
+
+
+General Purpose or Transaction Processing
+
+OLTP : DW
+----
+일반적인 업무로 사용됨
+
+
+global database name : 기업에서 사용할 목적에 맞게 이름 지정
+
+
+
+sys : oracle db관리 최상의 user
+system : sys 다음 차상위 user
+
+그외 dbsnmp/sysman....  등
+총 비밀번호를 oracle로 지정해줌
+
+sample schemas -> db 안에 가상의 data가 사전에 실습용으로 설치가 됨
